Create "Repositories" folder and move database calling to this folder (using DI)

--- a/TicketSystem/TicketSystem/appsettings.json
+++ b/TicketSystem/TicketSystem/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DbConnection": "Server=DESKTOP-O9SGM89;Database=ticketsystem;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
