--- a/TicketSystem/TicketSystem/appsettings.json
+++ b/TicketSystem/TicketSystem/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DbConnection": "Server=WIN-43MJ18FOHEV\\SQLEXPRESS;Database=ticketsystem;Trusted_Connection=True;TrustServerCertificate=True;"
-  }, //"Server=DESKTOP-O9SGM89;Database=ticketsystem;Trusted_Connection=True;TrustServerCertificate=True;"
+  "ConnectionStrings": { // WIN-43MJ18FOHEV\\SQLEXPRESS
+    "DbConnection": "Server=DESKTOP-O9SGM89;Database=ticketsystem;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
