Feature/nmd 225 - Added Automapper, Removed unnecessary logic from repositories, Bug fix (#9)
* Add Automapper

* - Added mapping profiles
- Add global AsNoTracking
- fix some bugs

* - Fix bugs

--- a/TicketSystem/TicketSystem/appsettings.json
+++ b/TicketSystem/TicketSystem/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings": {
+  "ConnectionStrings": { // WIN-43MJ18FOHEV\\SQLEXPRESS
     "DbConnection": "Server=DESKTOP-O9SGM89;Database=ticketsystem;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
