--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Go to current folder
-      run: cd ./Marsh/TicketSystem
+      run: cd ./TicketSystem/
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
