--- a/TicketSystem/TicketSystem.Tests/TicketSystem.Tests.csproj
+++ b/TicketSystem/TicketSystem.Tests/TicketSystem.Tests.csproj
@@ -12,6 +12,7 @@
 		<PackageReference Include="FluentAssertions" Version="6.10.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.3" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
 		<PackageReference Include="Moq" Version="4.18.4" />
 		<PackageReference Include="Shouldly" Version="4.1.0" />
