--- a/TicketSystem/TicketSystem/appsettings.json
+++ b/TicketSystem/TicketSystem/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings": { // WIN-43MJ18FOHEV\\SQLEXPRESS
+  "ConnectionStrings": {
     "DbConnection": "Server=DESKTOP-O9SGM89;Database=ticketsystem;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
@@ -7,6 +7,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Domain": "https://dev-s4y8ykh2os60u2my.eu.auth0.com/",
+    "Audience": "TicketSystem",
+    "ClientId": "eAln4HRebZIw9Ami3qnF4iqI2QzijVbg"
   },
   "AllowedHosts": "*"
 }
