- create all service

--- a/TicketSystem/TicketSystem/appsettings.json
+++ b/TicketSystem/TicketSystem/appsettings.json
@@ -7,6 +7,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+    "x-api-key" : "1234567890"
   },
   "AllowedHosts": "*"
 }
