- create integration tests

--- a/TS.MailService/TS.MailService.API/appsettings.json
+++ b/TS.MailService/TS.MailService.API/appsettings.json
@@ -15,6 +15,6 @@
     "Username": "vlad.marshin@innowise-group.com",
     "Password": "ehuxjwkmandfosdi"
   },
-  "X-Api-Key": "59E0492F-7CC0-43D8-B262-60367970915C",
+  "x-api-key": "59E0492F-7CC0-43D8-B262-60367970915C",
   "AllowedHosts": "*"
 }
