--- a/TS.MailService/TS.MailService.Tests/TS.MailService.Tests.csproj
+++ b/TS.MailService/TS.MailService.Tests/TS.MailService.Tests.csproj
@@ -10,7 +10,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="FluentAssertions" Version="6.10.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.3" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+		<PackageReference Include="Mongo2Go" Version="3.1.3" />
 		<PackageReference Include="Moq" Version="4.18.4" />
 		<PackageReference Include="xunit" Version="2.4.2" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -27,10 +29,6 @@
 		<ProjectReference Include="..\TS.MailService.API\TS.MailService.Application.csproj" />
 		<ProjectReference Include="..\TS.MailService.Domain\TS.MailService.Domain.csproj" />
 		<ProjectReference Include="..\TS.MailService.Infrastructure\TS.MailService.Infrastructure.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="IntegrationTests\" />
 	</ItemGroup>
 
 </Project>
