--- a/TS.MailService/TS.MailService.API/TS.MailService.Application.csproj
+++ b/TS.MailService/TS.MailService.API/TS.MailService.Application.csproj
@@ -11,4 +11,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TS.MailService.Domain\TS.MailService.Domain.csproj" />
+  </ItemGroup>
 </Project>
