--- a/TicketSystem/TicketSystem.Tests/TicketSystem.Tests.csproj
+++ b/TicketSystem/TicketSystem.Tests/TicketSystem.Tests.csproj
@@ -21,6 +21,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Auth0.AuthenticationApi" Version="7.18.0" />
 		<PackageReference Include="FluentAssertions" Version="6.10.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.3" />
