--- a/TS.ApiGateway/TS.ApiGateway/appsettings.json
+++ b/TS.ApiGateway/TS.ApiGateway/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ClientId": "eAln4HRebZIw9Ami3qnF4iqI2QzijVbg"
 }
