--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@
 /TS.MailService/TS.MailService.Tests/obj
 /TS.MailService/TS.MailService.Infrastructure/bin/Debug/net7.0
 /TS.MailService/TS.MailService.Infrastructure/obj
+/TS.Messengers.Microservice/.vs/TS.Messengers.Microservice
+/TS.Messengers.Microservice/TS.Messengers.Microservice/obj
+/TS.Messengers.Microservice/TS.Messengers.Microservice.BLL/obj
+/TS.Messengers.Microservice/TS.Messengers.Microservice.DAL/obj
+/TS.Messengers.Microservice/TS.Messengers.Microservice.Tests/bin/Debug/net7.0
+/TS.Messengers.Microservice/TS.Messengers.Microservice.Tests/obj
+/TS.Messengers.Microservice/.vs/ProjectEvaluation
