Feature/Add Mail Microservice (#35)
* - create new project

* gitignore

* - Create base DDD layers

* - add some folders to gitignore

* - rename Application layer

* - Add models

* - csproj

* - add BaseEntity

* - install FastEndpoints

* - Add ShortEmailMessageDto

* - add new DTO

* - create all service

* - create integration tests

* - Create integration tests

* - nulluble type

* - Add public to Interface IBaseModel

* - remove empty  line

* - change appsetting

* - Move tests to another PR

--- a/TS.MailService/TS.MailService.API/appsettings.json
+++ b/TS.MailService/TS.MailService.API/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MongoDb": {
+    "MongoDbConnectionString": "mongodb+srv://VladMarshin:qwer1234@emailmicroservice.hlnl1sc.mongodb.net/?retryWrites=true&w=majority",
+    "Database": "EmailMicroservice"
+  },
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "vlad.marshin@innowise-group.com",
+    "Password": "ehuxjwkmandfosdi"
+  },
+  "x-api-key": "59E0492F-7CC0-43D8-B262-60367970915C",
   "AllowedHosts": "*"
 }
