--- a/TicketSystem/TicketSystem/appsettings.json
+++ b/TicketSystem/TicketSystem/appsettings.json
@@ -6,7 +6,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
+    },
+    "x-api-key": "59E0492F-7CC0-43D8-B262-60367970915C"
   },
   "Authentication": {
     "Domain": "https://dev-s4y8ykh2os60u2my.eu.auth0.com/",
