remove mail from appsettings

--- a/TS.MailService/TS.MailService.API/appsettings.json
+++ b/TS.MailService/TS.MailService.API/appsettings.json
@@ -10,10 +10,10 @@
     "Database": "EmailMicroservice"
   },
   "Smtp": {
-    "Host": "smtp.gmail.com",
-    "Port": 587,
-    "Username": "vlad.marshin@innowise-group.com",
-    "Password": "ehuxjwkmandfosdi"
+    "Host": "",
+    "Port": ,
+    "Username": "",
+    "Password": ""
   },
   "x-api-key": "59E0492F-7CC0-43D8-B262-60367970915C",
   "AllowedHosts": "*"
